--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,4 +30,5 @@ androidx-adaptive-android = { group = "androidx.compose.material3.adaptive", nam
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 
