--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ coil = "3.0.4"
 retrofit-adapters = "1.0.12"
 chucker = "4.1.0"
 koin = "4.0.1"
+work_version = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -57,6 +58,7 @@ retrofit-kotlin-result = { group = "com.github.skydoves", name = "retrofit-adapt
 chucker = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
 chuckerNoOp = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+workManager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work_version" }
 
 [plugins]
 jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
