--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,10 @@ retrofit-adapters = "1.0.12"
 chucker = "4.1.0"
 koin = "4.0.1"
 work_version = "2.9.0"
+google_maps_version = "6.2.0"
+media3_version = "1.5.1"
+google_services = "4.4.2"
+firebase_bom = "33.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -59,6 +63,13 @@ chucker = { group = "com.github.chuckerteam.chucker", name = "library", version.
 chuckerNoOp = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 workManager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work_version" }
+googleMaps = { group = "com.google.maps.android", name = "maps-compose", version.ref = "google_maps_version" }
+media3-player = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3_version" }
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3_version" }
+media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3_version" }
+media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3_version" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase_bom" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx" }
 
 [plugins]
 jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
@@ -67,3 +78,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google_services"}
