--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,10 @@ google_maps_version = "6.2.0"
 media3_version = "1.5.1"
 google_services = "4.4.2"
 firebase_bom = "33.8.0"
+mockito = "5.4.0"
+mockito-android = "5.12.0"
+turbine = "1.2.0"
+coroutine-test = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -70,6 +74,13 @@ media3-common = { group = "androidx.media3", name = "media3-common", version.ref
 media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3_version" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase_bom" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx" }
+mockito = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockito" }
+mockito-android = { group = "org.mockito", name = "mockito-android", version.ref = "mockito-android" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+coroutine-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutine-test" }
+androidx-espresso-compose = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-espresso-compose-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+
 
 [plugins]
 jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
